build custom gradle image for Java 19 builds