@@ -1,3 +1,4 @@
+# START: WE ARE BUILDING A CUSTOM GRADLE IMAGE BECAUSE JAVA 19 IS NOT CURRENTLY SUPPORTED IN PUBLIC IMAGES
 FROM eclipse-temurin:19-jdk-alpine as gradle
 
 CMD ["gradle"]
@@ -18,20 +19,6 @@ VOLUME /home/gradle/.gradle
 
 WORKDIR /home/gradle
 
-RUN set -o errexit -o nounset \
-    && echo "Installing VCSes" \
-    && apk add --no-cache \
-      git \
-      git-lfs \
-      mercurial \
-      subversion \
-    \
-    && echo "Testing VCSes" \
-    && which git \
-    && which git-lfs \
-    && which hg \
-    && which svn
-
 ENV GRADLE_VERSION 7.6-milestone-1
 ARG GRADLE_DOWNLOAD_SHA256=f6b8596b10cce501591e92f229816aa4046424f3b24d771751b06779d58c8ec4
 RUN set -o errexit -o nounset \
@@ -41,6 +28,7 @@ RUN set -o errexit -o nounset \
     && mv "gradle-${GRADLE_VERSION}" "${GRADLE_HOME}/" \
     && ln -s "${GRADLE_HOME}/bin/gradle" /usr/bin/gradle \
     && gradle --version
+# END : WE ARE BUILDING A CUSTOM GRADLE IMAGE BECAUSE JAVA 19 IS NOT CURRENTLY SUPPORTED IN PUBLIC IMAGES
 
 USER root
 WORKDIR /http4k
@@ -51,10 +39,10 @@ COPY jettyloom jettyloom
 RUN gradle --quiet jettyloom:shadowJar
 
 FROM amazoncorretto:19 as java
-COPY --from=gradle /http4k/jettyloom/build/libs/http4k-jettyloom-benchmark.jar /home/app/http4k-jettyloon/
+COPY --from=gradle /http4k/jettyloom/build/libs/http4k-jettyloom-benchmark.jar /home/app/http4k-jettyloom/
 
 WORKDIR /home/app/http4k-jettyloom
 
 EXPOSE 9000
 
-CMD ["java", "-server", "-XX:+UseNUMA", "--enable-preview", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-XX:+AlwaysPreTouch", "-jar", "jettyloom/build/libs/http4k-jettyloom-benchmark.jar"]
+CMD ["java", "-server", "-XX:+UseNUMA", "--enable-preview", "-XX:+UseParallelGC", "-XX:+AlwaysPreTouch", "-jar", "/home/app/http4k-jettyloom/http4k-jettyloom-benchmark.jar"]
